--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,9 +46,11 @@
     <string name="nav_friends">WeFriends</string>
     <string name="nav_extras">Extras</string>
     <string name="nav_moi">Me</string>
+    <string name ="Aucun_nom">No name</string>
 
 <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
 
 
 </resources>
